tests/NormalTests/paczka1/fuzzy1/29977955.err
Error in line 2: hZ2jpOgHN4N S313 87,9
Error in line 9: VdD A423 13,4
Error in line 10: vwjTH A423 54,8
Error in line 25: 6LgEHvc S313 44,08
